[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
mongodb = {version = "2.1.0", default-features = false, features = ["sync"]}
serde_json = "1.0.79"
[dev-dependencies]
rand = "0.8.5"
